# hackclub-scrapyard

./: .gitignore  LICENSE  README.md  package-lock.json
2fa-device-firmware/: main.py  simon.py
app/: astro.config.mjs  package-lock.json  package.json
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src-tauri/src/ffi_lib/: error.rs  ffi.rs
app/src-tauri/tests/: unit_tests.rs
app/src/electron/: main.js
app/src/layouts/: Layout.astro
app/src/pages/: demo.astro  index.astro  settings.astro  setup.astro
simon_game_ffi/: CMakeLists.txt
simon_game_ffi/include/: simon_game.h
simon_game_ffi/src/: Logger.cpp  SerialMonitor.cpp  SerialMonitor.hpp  ffi.cpp  middleWhere.hpp
simon_game_rs/: Cargo.toml  build.rs
simon_game_rs/src/: error.rs  ffi_lib.rs
simon_game_rs/tests/: integration_tests.rs  mock_ffi.rs
testing/: Logger.hpp  SerialCommunication.cpp  SerialCommunication.hpp  build.sh  keyboardBlock.cpp  kill.bat  main.cpp  middleWhere.cpp  pins.cpp  run.bat
testing/lock/: SerialMonitor.cpp  screenLock.cpp  screenLock.h
